# simmer-sdk

./: .gitignore  README.md  pyproject.toml
docs/: hybrid-generator-prompts.md  local-models-guide.md  spec.md  split-generator-findings.md
docs/simmer/: iteration-0-candidate.md  iteration-0-judgment.md  result.md  trajectory.md
docs/superpowers/plans/: 2026-03-25-gap-fixes.md  2026-03-25-simmer-sdk.md
docs/superpowers/specs/: 2026-03-25-simmer-sdk-design.md
src/simmer_sdk/: __init__.py  api_agent.py  client.py  dispatch.py  generator.py  judge.py  judge_board.py  local_agent.py  primitives.py  prompts.py  refine.py  reflect.py  setup.py  tools.py  types.py  usage.py
tests/: compare_configs.py  conftest.py  evaluate_spec.py  orrery_full_pipeline.py  orrery_golden_set.py  orrery_local_pipeline.py  smoke_ollama.py  test_client.py  test_custom_tools.py  test_generator.py  test_integration.py  test_judge.py  test_judge_board.py  test_plateau.py  test_primitives.py  test_prompts.py  test_refine_helpers.py  test_reflect.py  test_setup.py  test_types.py
tests/fixtures/sample_docs/: 2024-04-05-Initial-Meeting.md  2024-05-09-Product-Demo.md  2024-06-14-Strategy-Sync.md  2024-12-18-Knowledge-Graph-Design.md  2025-07-16-Agent-Architecture.md
tests/reference/: README.md  agency-creative-test-results.md  investigation-judges-final-results.md  investigation-vs-agency-creative-comparison.md
tests/reference/dnd-agency-board/: iteration-1-candidate.md  iteration-2-candidate.md  result.md  trajectory.md
tests/reference/dnd-progress-test/: iteration-1-candidate.md  (+3 more)
(+59 files in other folders)
